# testbot

./: .env-non-dev  bot.py  pyproject.toml
src/bot/handlers/: __init__.py  _main.py
src/common/: __init__.py  _bot_init.py  _config.py
src/database/: __init__.py  _database.py
